# Vulkan-Rendering-Framework

./: CMakeLists.txt  CMakePresets.json
giereczka/: CMakeLists.txt
giereczka/includes/: buffer.h  camera.h  debug_ui.h  descriptors.h  device.h  engine.h  giereczka.h  material.h  model.h  pch.h  performance_counter.h  player_controller.h  renderer.h  swapchain.h  texture.h  timestep.h  topaz_input_system.h  utils.h  window.h
giereczka/includes/buffers/: global_ubo.h  skeletal_animation_uniform.h
giereczka/includes/descriptors/: material_descriptor.h
giereczka/includes/game_objects/: game_object.h  point_light_object.h
giereczka/includes/passes/: shadow_pass.h
giereczka/includes/pipelines/: light_pipeline.h  main_pipeline.h  pipeline.h  raytracing_pipeline.h  wireframe_pipeline.h
giereczka/includes/skeletal_animations/: gltf_model.h  skeletal_animation.h  skeletal_animations.h  skeleton.h
giereczka/includes/systems/: object_manager_system.h  point_light_system.h  raytracing_render_system.h  render_system.h  texture_manager_system.h
giereczka/models/: animated_model.gltf  plane.gltf
giereczka/shaders/: frag_shader.frag  point_light.frag  point_light.vert  raytracing_compute_shader.comp  vert_shader.vert  wireframe_frag_shader.frag  wireframe_geom_shader.geom  wireframe_vert_shader.vert
giereczka/src/: buffer.cpp  camera.cpp  debug_ui.cpp  descriptors.cpp  device.cpp  engine.cpp  giereczka.cpp  model.cpp  performance_counter.cpp  player_controller.cpp  renderer.cpp  swapchain.cpp  texture.cpp  timestep.cpp  topaz_input_system.cpp  window.cpp
giereczka/src/descriptors/: material_descriptor.cpp
giereczka/src/game_objects/: game_object.cpp  point_light_object.cpp
giereczka/src/passes/: shadow_pass.cpp
giereczka/src/pipelines/: light_pipeline.cpp  main_pipeline.cpp  pipeline.cpp  raytracing_pipeline.cpp  wireframe_pipeline.cpp
giereczka/src/skeletal_animations/: gltf_model.cpp  skeletal_animation.cpp  skeletal_animations.cpp  skeleton.cpp
giereczka/src/systems/: object_manager_system.cpp  point_light_system.cpp  raytracing_render_system.cpp  render_system.cpp  texture_manager_system.cpp
